force-app/main/default/objects/Parking__c/Parking__c.object-meta.xml
<CustomObject>
    <label>Parking</label>
    <nameField>
        <displayFormat>PR - {00000}</displayFormat>
        <label>Parking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parkings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>