force-app/main/default/objects/Parking__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stilt</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>1st Level</fullName>
            </value>
            <value>
                <fullName>2nd Level</fullName>
            </value>
            <value>
                <fullName>3rd Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>