force-app/main/default/objects/Parking__c/fields/Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type__c</fullName>
    <label>Parking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bike</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>