force-app/main/default/objects/Parking__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Parkings</relationshipLabel>
    <relationshipName>Parkings</relationshipName>
    <type>Lookup</type>
</CustomField>