force-app/main/default/objects/Parking__c/fields/Slot_Number__c.field-meta.xml
<CustomField>
    <fullName>Slot_Number__c</fullName>
    <label>Slot Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>