force-app/main/default/objects/Parking__c/fields/Swapped_Slot__c.field-meta.xml
<CustomField>
    <fullName>Swapped_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swapped Slot</label>
    <referenceTo>Parking__c</referenceTo>
    <relationshipLabel>Parkings</relationshipLabel>
    <relationshipName>Parkings</relationshipName>
    <type>Lookup</type>
</CustomField>