force-app/main/default/objects/Parking__c/fields/Swapped_Slot_Number__c.field-meta.xml
<CustomField>
    <fullName>Swapped_Slot_Number__c</fullName>
    <label>Swapped Slot Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>