force-app/main/default/objects/Parking__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Block__c</referenceTo>
    <relationshipLabel>Parkings</relationshipLabel>
    <relationshipName>Parkings</relationshipName>
    <type>Lookup</type>
</CustomField>