force-app/main/default/objects/Parking__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Parkings</relationshipLabel>
    <relationshipName>Parkings</relationshipName>
    <type>Lookup</type>
</CustomField>