force-app/main/default/objects/Parking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parking_Type__c</columns>
    <columns>Slot_Number__c</columns>
    <columns>Booking__c</columns>
    <columns>Unit__c</columns>
    <columns>Is_Swapped__c</columns>
    <columns>Swapped_Slot__c</columns>
    <columns>Level__c</columns>
    <columns>Swapped_Slot_Number__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tower__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>